RESOLVED FIXED 262134
REGRESSION(268154@main): [ macOS ] TestWebKitAPI.WKNavigation.WebProcessLimit is a constant failure
https://bugs.webkit.org/show_bug.cgi?id=262134
Summary REGRESSION(268154@main): [ macOS ] TestWebKitAPI.WKNavigation.WebProcessLimit...
Ben Schwartz
Reported 2023-09-26 11:53:40 PDT
TestWebKitAPI.WKNavigation.WebProcessLimit This API test is constantly failing on macOS. HISTORY: https://results.webkit.org/?suite=api-tests&test=TestWebKitAPI.WKNavigation.WebProcessLimit&platform=mac STDIO LOG: TestWebKitAPI.WKNavigation.WebProcessLimit /Volumes/Data/worker/Apple-Ventura-Release-Build/build/Tools/TestWebKitAPI/Tests/WebKitCocoa/WebContentProcessDidTerminate.mm:445 Value of: didCrash Actual: true Expected: false REPRODUCIBILITY: I was able to reproduce this issue on macOS Ventura (13.5, 22G74/arm64) ToT using the following command: run-api-tests --debug --verbose TestWebKitAPI.WKNavigation.WebProcessLimit REGRESSION: I was able to identify a potential regression point at 268154@main. As I don't have access to a reliable testing environment, I can't bisect to be sure; however, changes at this point seem directly related to the issue and the first failure instance is only a few commits later at 268157@main.
Attachments
Radar WebKit Bug Importer
Comment 1 2023-09-26 11:53:53 PDT
EWS
Comment 2 2023-09-26 14:02:11 PDT
Test gardening commit 268478@main (39614e3c76d4): <https://commits.webkit.org/268478@main> Reviewed commits have been landed. Closing PR #18243 and removing active labels.
Ben Schwartz
Comment 3 2023-09-26 14:03:09 PDT
FULL STDIO: TestWebKitAPI.WKNavigation.WebProcessLimit /Volumes/Data/worker/Apple-Ventura-Release-Build/build/Tools/TestWebKitAPI/Tests/WebKitCocoa/WebContentProcessDidTerminate.mm:445 Value of: didCrash Actual: true Expected: false /Volumes/Data/worker/Apple-Ventura-Release-Build/build/Tools/TestWebKitAPI/Tests/WebKitCocoa/WebContentProcessDidTerminate.mm:447 Expected: ([view _webProcessIdentifier]) != (0), actual: 0 vs 0 /Volumes/Data/worker/Apple-Ventura-Release-Build/build/Tools/TestWebKitAPI/Tests/WebKitCocoa/WebContentProcessDidTerminate.mm:452 Expected equality of these values: views[0] Which is: 1 view Which is: 0x13e609f50 /Volumes/Data/worker/Apple-Ventura-Release-Build/build/Tools/TestWebKitAPI/Tests/WebKitCocoa/WebContentProcessDidTerminate.mm:462 Expected: ([views[i] _webProcessIdentifier]) != (0), actual: 0 vs 0 /Volumes/Data/worker/Apple-Ventura-Release-Build/build/Tools/TestWebKitAPI/Tests/WebKitCocoa/WebContentProcessDidTerminate.mm:467 Expected equality of these values: views[1] Which is: 1 view Which is: 0x11ea0b3d0 /Volumes/Data/worker/Apple-Ventura-Release-Build/build/Tools/TestWebKitAPI/Tests/WebKitCocoa/WebContentProcessDidTerminate.mm:477 Expected: ([views[i] _webProcessIdentifier]) != (0), actual: 0 vs 0
Chris Dumez
Comment 4 2023-09-26 14:58:10 PDT
EWS
Comment 5 2023-09-26 18:58:19 PDT
Committed 268492@main (50b0cd282f38): <https://commits.webkit.org/268492@main> Reviewed commits have been landed. Closing PR #18246 and removing active labels.
Alexey Proskuryakov
Comment 6 2023-09-27 18:12:29 PDT
*** Bug 261946 has been marked as a duplicate of this bug. ***
Note You need to log in before you can comment on or make changes to this bug.